INT-fix-40a16.5: Fixed non-working Gathering button on planet list

--- a/design/templates/OpenGame/planet_list.tpl.html
+++ b/design/templates/OpenGame/planet_list.tpl.html
@@ -57,7 +57,7 @@
           </span>
           <!-- ENDIF -->
 
-          <span title="{L_flt_gather_all}" class="a75 icon-gather-wrapper" go="fleet" mode="5" style="">
+          <span title="{L_flt_gather_all}" class="a75 icon-gather-wrapper" go="fleet" mode="5">
             <div class="icons icon-gather"></div>
           </span>
 
